@@ -19,14 +19,14 @@ class ContextInputMessageFactory {
     }
 
     public String mainDirectoryDoesNotExist(String path) {
-        return String.format("Main directory (%s) is not an existing directory", env.path(path));
+        return "Main directory (%s) is not an existing directory".formatted(env.path(path));
     }
 
     public String repositoryDoesNotExist(String path) {
-        return String.format("Repository (%s) is not an existing directory", env.path(path));
+        return "Repository (%s) is not an existing directory".formatted(env.path(path));
     }
 
     public String maxDepthMustBePositive(int maxDepth) {
-        return String.format("Orphan lookup max-depth (%d) must be a positive integer", maxDepth);
+        return "Orphan lookup max-depth (%d) must be a positive integer".formatted(maxDepth);
     }
 }
