@@ -52,7 +52,7 @@ public class FileTree {
         try (Stream<Path> files = Files.walk(root)) {
             return of(files.filter(path -> !Objects.equals(root, path)).map(path -> FileRef.of(root, path)));
         } catch (IOException e) {
-            fail(String.format("Unable to initialize FileTree for path %s", root), e);
+            fail("Unable to initialize FileTree for path %s".formatted(root), e);
             throw new IllegalStateException("unreachable");
         }
     }
